--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -10,6 +10,7 @@ alembic==1.13.3
 # Authentication & Security
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+psycopg2-binary==2.9.9
 python-multipart==0.0.12
 bcrypt==4.2.0
 cryptography==41.0.7  
